--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera!</title>
+	<title>Hello Coursera!
+	It's a Great Course</title>
 </head>
 <body>
 Hello Coursera!
