--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera!
-	It's a Great Course</title>
+	<title>Hello Coursera!</title>
 </head>
 <body>
-Hello Coursera!
+Hello Coursera! It's a great coure!
 </body>
 </html>
